syntax = "proto3";

package user;

option go_package = "user/api";

service User {
    rpc UserInfo (UserRequest) returns (UserResponse) {}
}

message UserRequest {
    int64 id = 1;
}

message UserResponse {
    string name = 1;
    int32 age = 2;
}